...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team13.trojancheckin_out.Layouts.Login">

    <Button
        android:id="@+id/login"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="@font/montserrat_semibold"
        android:letterSpacing="0.02"
        android:stateListAnimator="@null"
        android:text="LOGIN"
        android:textSize="16sp"
        app:backgroundTint="#990000"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:srcCompat="@drawable/tommyicon" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:backgroundTint="#990000"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHighlight="#80990000"
...
        android:layout_marginTop="26dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="PASSWORD"
        android:textColor="#990000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:backgroundTint="#990000"
...
