...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/buildName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="SAL"
                android:textColor="#000000"
...
                android:scaleY="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/textViewPercent" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_qr"
                android:scaleX=".6"
                android:scaleY=".6"
                app:layout_constraintEnd_toStartOf="@+id/divider"
...
